--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "npm": "^6.1.0",
     "react-docgen": "^2.20.1",
     "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
