--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -12,6 +12,7 @@
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^0.14.27",
     "ramda": "^0.25.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -32,6 +33,9 @@
     "npm": "^6.1.0",
     "react-docgen": "^2.20.1",
     "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
