- viewport props (viewport dataframe & indices) - ramda @types

--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -20,6 +20,7 @@
     "sheetclip": "^0.3.0"
   },
   "devDependencies": {
+    "@types/ramda": "^0.25.36",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
