--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -14,8 +14,6 @@
   "dependencies": {
     "@types/react": "^0.14.27",
     "ramda": "^0.25.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
     "react-select": "^1.2.1",
     "sheetclip": "^0.3.0"
   },
@@ -32,7 +30,10 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
     "npm": "^6.1.0",
+    "react": "^15.4.2",
     "react-docgen": "^2.20.1",
+    "react-dom": "^15.4.2",
+    "react-perf-devtool": "^3.0.8",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
