--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-table",
-  "version": "2.0.7rc1",
+  "version": "3.0.0dev",
   "description": "Dash table",
   "main": "build/index.js",
   "scripts": {
