--- a/.eslintrc
+++ b/.eslintrc
@@ -58,7 +58,7 @@
     "no-extend-native": ["error"],
     "no-extra-bind": ["error"],
     "no-extra-boolean-cast": ["error"],
-    "no-inline-comments": 0,
+    "no-inline-comments": ["error"],
     "no-implicit-coercion": ["error"],
     "no-implied-eval": ["error"],
     "no-inner-declarations": ["off"],
