--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/react": "^0.14.27",
     "ramda": "^0.25.0",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "react-select": "^1.2.1",
     "sheetclip": "^0.3.0"
   },
