--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-serve ./webpack.serve.config.js --open",
     "build:js-dev": "webpack --mode development",
     "build:js": "webpack --mode production",
-    "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table"
+    "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table",
+    "lint": "eslint src && tslint --project . src/**/*.ts"
   },
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
