--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
         "module": "esnext",
         "moduleResolution": "node",
         "noImplicitAny": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "paths": {
             "core/*": ["src/core/*"],
             "dash-table/*": ["src/dash-table/*"],
