--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
     "npm": "^6.1.0",
     "react-docgen": "^2.20.1",
     "style-loader": "^0.21.0",
