--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -1,17 +1,18 @@
 {
   "name": "dash-table",
-  "version": "2.0.7rc1",
+  "version": "3.0.0dev",
   "description": "Dash table",
   "main": "build/index.js",
   "scripts": {
     "start": "webpack-serve ./webpack.serve.config.js --open",
     "build:js-dev": "webpack --mode development",
     "build:js": "webpack --mode production",
-    "build:py": "./extract-meta src/lib/components/Table.js > dash_table/metadata.json && cp package.json dash_table"
+    "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table"
   },
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^0.14.27",
     "ramda": "^0.25.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -19,6 +20,7 @@
     "sheetclip": "^0.3.0"
   },
   "devDependencies": {
+    "@types/ramda": "^0.25.36",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
@@ -32,6 +34,9 @@
     "npm": "^6.1.0",
     "react-docgen": "^2.20.1",
     "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
