--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -4,15 +4,16 @@
   "description": "Dash table",
   "main": "build/index.js",
   "scripts": {
-    "start": "webpack-serve ./webpack.serve.config.js --open",
+    "start": "webpack-dev-server --config ./webpack.config.js --content-base dash_table --mode development",
     "build:js-dev": "webpack --mode development",
     "build:js": "webpack --mode production",
-    "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table"
+    "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table",
+    "lint": "eslint src && tslint --project . src/**/*.ts"
   },
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^0.14.27",
+    "@types/react": "^16.4.8",
     "ramda": "^0.25.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -31,6 +32,9 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
+    "file-loader": "^1.1.11",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
     "npm": "^6.1.0",
     "react-docgen": "^2.20.1",
     "style-loader": "^0.21.0",
@@ -39,7 +43,7 @@
     "typescript": "^3.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-serve": "^1.0.2"
+    "webpack-dev-server": "^3.1.5"
   },
   "peerDependencies": {
     "react": ">=0.14",
