navigation and selection tests in typescript using cypress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
         "strictPropertyInitialization": false,
         "target": "esnext",
         "traceResolution": true
-    }
+    },
+    "exclude": [
+        "cypress/*"
+    ]
 }
