--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,12 +1,26 @@
 {
     "compilerOptions": {
         "allowJs": true,
-        "baseUrl": "../node_modules",
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": "./..",
+        "emitDecoratorMetadata": false,
+        "experimentalDecorators": true,
+        "lib": ["esnext", "dom"],
+        "module": "esnext",
+        "moduleResolution": "node",
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "paths": {
+            "cypress/*": ["cypress/src/*"],
+        },
+        "sourceMap": false,
+        "strict": true,
+        "strictPropertyInitialization": false,
+        "target": "esnext",
+        "traceResolution": true,
         "types": [
             "cypress"
         ]
-    },
-    "include": [
-        "**/*.*"
-    ]
+    }
 }
