--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sheetclip": "^0.3.0"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^2.0.1",
     "@types/ramda": "^0.25.36",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
