--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include dash_table/bundle.js
 include dash_table/metadata.json
 include dash_table/package.json
+include package.json
 include README.md
