refactor + cypress tests against Python BE / functional in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
     "test":
         docker:
-            - image: circleci/node:8.9.4-browsers
+            - image: circleci/python:3.6-node-browsers
             - image: cypress/base:8
 
         steps:
@@ -13,6 +13,11 @@ jobs:
             - run:
                 name: Install npm packages
                 command: npm install
+            - run:
+                name: Cypress Install
+                command: |
+                    $(npm bin)/cypress install
+
             - save_cache:
                 key: deps1-{{ .Branch }}-{{ checksum "npm-shrinkwrap.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
                 paths:
@@ -20,12 +25,34 @@ jobs:
                     - /home/circleci/.cache/Cypress
 
             - run:
-                name: Run build
+                name: Create virtualenv
+                command: |
+                    python3 -m venv venv
+
+            - run:
+                name: Install requirements
+                command: |
+                    . venv/bin/activate
+                    pip install -r tests/python_fixtures/requirements.txt --quiet
+
+            - save_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "tests/python_fixtures/requirements.txt" }}
+                paths:
+                    - "venv"
+
+            - run:
+                name: Run build:js
                 command: npm run build:js
 
             - run:
-                name: Run tests
-                command: npm run test
+                name: Run build:py
+                command: npm run build:py
+
+            - run:
+                name: Run hosts
+                command: |
+                    . venv/bin/activate
+                    npm run test
 
     "node":
         docker:
@@ -74,10 +101,10 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r tests/requirements.txt --quiet
+                    pip install -r tests/python_fixtures/requirements.txt --quiet
 
             - save_cache:
-                key: deps1-{{ .Branch }}-{{ checksum "tests/requirements.txt" }}
+                key: deps1-{{ .Branch }}-{{ checksum "tests/python_fixtures/requirements.txt" }}
                 paths:
                     - "venv"
 
@@ -99,7 +126,7 @@ jobs:
                 name: Integration Tests
                 command: |
                     . venv/bin/activate
-                    python -m unittest tests.test_render
+                    python -m unittest tests.python_fixtures.test_render
                 when: always
 
 
