--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "build/index.js",
   "scripts": {
     "private::build": "webpack --display-reasons --bail",
-    "private::host": "http-server ./dash_table -c-1 --silent",
+    "private::host_dash": "python tests/e2e/dash/v_be_page.py",
+    "private::host_js": "http-server ./dash_table -c-1 --silent",
+    "private::wait_dash": "wait-on http://localhost:8081",
+    "private::wait_js": "wait-on http://localhost:8080",
     "private::lint.js": "eslint src",
     "private::lint.ts": "tslint --project . src/**/*.ts",
+    "preprivate::opentests": "run-s private::wait*",
     "private::opentests": "cypress open",
+    "preprivate::runtests": "run-s private::wait*",
     "private::runtests": "cypress run",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
-    "build:js-dev": "run-s \" private::build -- --mode development\"",
-    "build:js": "run-s \" private::build -- --mode production\"",
+    "build:js-dev": "run-s \"private::build -- --mode development\"",
+    "build:js": "run-s \"private::build -- --mode production\"",
     "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
-    "test": "run-p --race private::host private::runtests",
-    "test.watch": "run-p --race \"private::build -- --mode development --watch\" private::host private::opentests"
+    "test": "run-p --race private::host* private::runtests",
+    "test.watch": "run-p --race \"private::build -- --mode development --watch\" --race private::host* private::opentests"
   },
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
@@ -53,6 +58,7 @@
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
+    "wait-on": "^2.1.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.5"
