add percy snapshots in JS

--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -4,6 +4,8 @@
   "description": "Dash table",
   "main": "build/index.js",
   "scripts": {
+    "preprivate::opentests": "run-s private::wait*",
+    "preprivate::runtests": "run-s private::wait*",
     "private::build": "webpack --display-reasons --bail",
     "private::host_dash": "python tests/e2e/dash/v_be_page.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
@@ -11,16 +13,15 @@
     "private::wait_js": "wait-on http://localhost:8080",
     "private::lint.js": "eslint src",
     "private::lint.ts": "tslint --project . src/**/*.ts",
-    "preprivate::opentests": "run-s private::wait*",
     "private::opentests": "cypress open",
-    "preprivate::runtests": "run-s private::wait*",
     "private::runtests": "cypress run",
+    "private::snapshots": "build-storybook && percy-storybook",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js": "run-s \"private::build -- --mode production\"",
     "build:py": "./extract-meta src/dash-table/components/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
-    "test": "run-p --race private::host* private::runtests",
+    "test": "run-p --race private::host* private::runtests private::snapshots",
     "test.watch": "run-p --race \"private::build -- --mode development --watch\" --race private::host* private::opentests"
   },
   "author": "Chris P <chris@plot.ly",
@@ -35,6 +36,9 @@
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^2.0.1",
+    "@percy-io/percy-storybook": "^2.0.0",
+    "@storybook/cli": "^4.0.0-alpha.16",
+    "@storybook/react": "^4.0.0-alpha.16",
     "@types/ramda": "^0.25.36",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
