--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -7,9 +7,11 @@
     "preprivate::opentests": "run-s private::wait*",
     "preprivate::runtests": "run-s private::wait*",
     "private::build": "webpack --display-reasons --bail",
-    "private::host_dash": "python tests/e2e/dash/v_be_page.py",
+    "private::host_dash8081": "python tests/e2e/dash/v_be_page.py",
+    "private::host_dash8082": "python tests/e2e/dash/v_copy_paste.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
-    "private::wait_dash": "wait-on http://localhost:8081",
+    "private::wait_dash8081": "wait-on http://localhost:8081",
+    "private::wait_dash8082": "wait-on http://localhost:8082",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::lint.js": "eslint src",
     "private::lint.ts": "tslint --project . src/**/*.ts",
