--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-table",
-  "version": "3.0.0rc5",
+  "version": "3.0.0rc6",
   "description": "Dash table",
   "main": "build/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js": "run-s \"private::build -- --mode production\"",
-    "build:py": "./extract-meta src/dash-table/component.js > dash_table/metadata.json && cp package.json dash_table",
+    "build:py": "./extract-meta src/dash-table/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
     "test": "run-p --race private::host* private::runtests private::snapshots",
     "test.watch": "run-p --race \"private::build -- --mode development --watch\" --race private::host* private::opentests"
