--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@storybook/cli": "^4.0.0-alpha.16",
     "@storybook/react": "^4.0.0-alpha.16",
     "@types/ramda": "^0.25.36",
+    "@types/react-select": "^1.2.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
