fix bug in test script

--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -17,13 +17,14 @@
     "private::lint.ts": "tslint --project . src/**/*.ts",
     "private::opentests": "cypress open",
     "private::runtests": "cypress run",
-    "private::snapshots": "build-storybook && percy-storybook",
+    "private::test-e2e": "run-p --race private::host* private::runtests",
+    "private::test-visual": "build-storybook && percy-storybook",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js": "run-s \"private::build -- --mode production\"",
     "build:py": "./extract-meta src/dash-table/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
-    "test": "run-p --race private::host* private::runtests private::snapshots",
+    "test": "run-p private::test-*",
     "test.watch": "run-p --race \"private::build -- --mode development --watch\" --race private::host* private::opentests"
   },
   "author": "Chris P <chris@plot.ly",
