--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "private::opentests": "cypress open",
     "private::runtests": "cypress run --browser chrome",
     "private::test-e2e": "run-p --race private::host* private::runtests",
-    "private::test-visual": "build-storybook",
+    "private::test-visual": "build-storybook && percy-storybook",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js": "run-s \"private::build -- --mode production\"",
