--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,35 @@ jobs:
                 command: npm run build:py
 
             - run:
-                name: Run hosts
+                name: Run tests
                 command: |
                     . venv/bin/activate
                     npm run test
+
+
+    "visual-test":
+        docker:
+            - image: circleci/node:8.11.3
+
+        steps:
+            - checkout
+
+            - restore_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "npm-shrinkwrap.json" }}-{{ checksum "package.json" }}
+
+            - run:
+                name: Install package.json
+                command: npm i
+
+            - save_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "npm-shrinkwrap.json" }}-{{ checksum "package.json" }}
+                paths:
+                    - node_modules
+
+            - run:
+                name: Run visual tests
+                command: npm run test.visual
+
 
     "node":
         docker:
@@ -143,3 +168,4 @@ workflows:
             - "python-3.6"
             - "node"
             - "test"
+            - "visual-test"
