--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "private::lint.ts": "tslint --project . src/**/*.ts",
     "private::opentests": "cypress open",
     "private::runtests": "cypress run --browser chrome",
-    "private::test-e2e": "run-p --race private::host* private::runtests",
-    "private::test-visual": "build-storybook && percy-storybook",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js": "run-s \"private::build -- --mode production\"",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js-test": "webpack --display-reasons --bail --config webpack.test.config.js",
     "build:py": "./extract-meta src/dash-table/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
-    "test": "run-s private::test-*",
+    "test": "run-p --race private::host* private::runtests",
+    "test.visual": "build-storybook && percy-storybook",
     "test.watch": "run-p --race \"build:js-test -- --watch\" --race private::host* private::opentests"
   },
   "author": "Chris P <chris@plot.ly",
