add browsers to the node image for visual-test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
 
     "visual-test":
         docker:
-            - image: circleci/node:8.11.3
+            - image: circleci/node:8.11.3-browsers
 
         steps:
             - checkout
