--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "build:js": "run-s \"private::build -- --mode production\"",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js-test": "run-s \"private::build -- --config webpack.test.config.js\"",
+    "build:js-test-watch": "run-s \"private::build -- --config webpack.test.config.js --watch\"",
     "build:py": "./extract-meta src/dash-table/Table.js > dash_table/metadata.json && cp package.json dash_table",
     "lint": "run-s private::lint.js private::lint.ts",
     "test": "run-p --race private::host* private::runtests",
     "test.visual": "build-storybook && percy-storybook",
-    "test.watch": "run-p --race \"build:js-test -- --watch\" --race private::host* private::opentests"
+    "test.watch": "run-p --race \"build:js-test-watch\" --race private::host* private::opentests"
   },
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
