--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@babel/preset-react": "^7.0.0",
     "@cypress/webpack-preprocessor": "^2.0.1",
     "@percy-io/percy-storybook": "^2.0.0",
-    "@storybook/cli": "^4.0.0-alpha.16",
-    "@storybook/react": "^4.0.0-alpha.16",
+    "@storybook/cli": "^4.0.2",
+    "@storybook/react": "^4.0.2",
     "@types/ramda": "^0.25.36",
     "@types/react-select": "^1.2.1",
     "babel-eslint": "^8.2.3",
