--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dash-table",
-  "version": "3.1.3",
+  "version": "3.1.4rc1",
   "description": "Dash table",
-  "main": "build/index.js",
+  "main": "dash_table/bundle.js",
   "scripts": {
     "preprivate::opentests": "run-s private::wait*",
     "preprivate::runtests": "run-s private::wait*",
