--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-table",
-  "version": "3.1.4rc1",
+  "version": "3.1.4-rc1",
   "description": "Dash table",
   "main": "dash_table/bundle.js",
   "scripts": {
