- rework derived props - documentation for props - new fe sort & filter dash server

--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -9,9 +9,11 @@
     "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --display-reasons --bail",
     "private::host_dash8081": "python tests/cypress/dash/v_be_page.py",
     "private::host_dash8082": "python tests/cypress/dash/v_copy_paste.py",
+    "private::host_dash8083": "python tests/cypress/dash/v_fe_paste.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
     "private::wait_dash8081": "wait-on http://localhost:8081",
     "private::wait_dash8082": "wait-on http://localhost:8082",
+    "private::wait_dash8083": "wait-on http://localhost:8083",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::lint.js": "eslint src",
     "private::lint.ts": "tslint --project . src/**/*.ts",
