--- a/package.json
+++ b/package.json
@@ -32,25 +32,18 @@
   "author": "Chris P <chris@plot.ly",
   "license": "MIT",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@types/react": "^16.4.8",
-    "ramda": "^0.25.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-select": "^1.2.1",
-    "sheetclip": "^0.3.0"
-  },
-  "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@cypress/webpack-preprocessor": "^2.0.1",
     "@percy-io/percy-storybook": "^2.0.0",
     "@storybook/cli": "^4.0.2",
     "@storybook/react": "^4.0.2",
-    "@types/ramda": "^0.25.36",
     "@types/react-select": "^1.2.1",
+    "@types/ramda": "^0.25.36",
+    "@types/react": "^16.4.8",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.4",
     "core-js": "^2.5.7",
@@ -66,7 +59,12 @@
     "less-loader": "^4.1.0",
     "npm": "^6.1.0",
     "npm-run-all": "^4.1.3",
+    "ramda": "^0.25.0",
+    "react": "15.4.2",
     "react-docgen": "^2.20.1",
+    "react-dom": "15.4.2",
+    "react-select": "^1.2.1",
+    "sheetclip": "^0.3.0",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
