- renovate app test

--- a/package.json
+++ b/package.json
@@ -85,5 +85,11 @@
   "engines": {
     "node": ">=8.11.0",
     "npm": ">=6.1.0"
+  },
+  "renovate-config": {
+    "extends": [
+      ":onlyNpm",
+      "group:all"
+    ]
   }
 }
