heroku - requirements need to contain everything from dash

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r requirements.txt --quiet
+                    pip install -r requirements-base.txt --quiet
                     pip install -r requirements-v0.txt --quiet
 
             - run:
@@ -85,7 +85,7 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r requirements.txt --quiet
+                    pip install -r requirements-base.txt --quiet
                     pip install -r requirements-v1.txt --quiet
 
             - run:
@@ -183,7 +183,7 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r requirements.txt --quiet
+                    pip install -r requirements-base.txt --quiet
                     pip install -r requirements-v0.txt --quiet
 
             - run:
@@ -218,7 +218,7 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r requirements.txt --quiet
+                    pip install -r requirements-base.txt --quiet
                     pip install -r requirements-v1.txt --quiet
 
             - run:
