- update py implementation for helpers - update linting to include non-generated py files

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "private::host_dash8082": "python tests/cypress/dash/v_copy_paste.py",
     "private::host_dash8083": "python tests/cypress/dash/v_fe_page.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
+    "private::lint:ts": "tslint '{src,demo,tests}/**/*.{js,ts,tsx}' --exclude '**/@Types/*.*'",
+    "private::lint:py": "flake8 --exclude=DataTable.py,__init__.py,_imports_.py --ignore=E501,F401,F841,F811 dash_table",
     "private::wait_dash8081": "wait-on http://localhost:8081",
     "private::wait_dash8082": "wait-on http://localhost:8082",
     "private::wait_dash8083": "wait-on http://localhost:8083",
@@ -31,7 +33,7 @@
     "private::runtests-v1": "run-s private::runtests:unit private::runtests:standalone private::runtests:server",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build": "run-s private::build:js private::build:py",
-    "lint": "tslint '{src,demo,tests}/**/*.{js,ts,tsx}' --exclude '**/@Types/*.*'",
+    "lint": "run-s private::lint:*",
     "test-v0": "run-p --race private::host* private::runtests-v0",
     "test-v1": "run-p --race private::host* private::runtests-v1",
     "test.visual": "build-storybook && percy-storybook",
