TS 3.3.4000 type checks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,11 +19,13 @@
         { "languageId": "*", "dictionaries": ["fonts", "css", "html", "npm", "typescript", "python"]}
     ],
     "cSpell.words": [
+        "Paginator",
         "atto",
         "deletable",
         "femto",
         "giga",
         "ints",
+        "memoizer",
         "milli",
         "nully",
         "peta",
