revert core-js version bump

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "cSpell.words": [
         "Paginator",
         "atto",
+        "corejs",
         "deletable",
         "femto",
         "giga",
