--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@percy-io/percy-storybook": "^2.1.0",
     "@storybook/cli": "^5.1.9",
     "@storybook/react": "^5.1.9",
